--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "vue": "^2.7.16",
     "vue-router": "^3.6.5",
